# gapless-crypto-clickhouse

./: .cz.toml  .doppler.yaml  .env  .env.cloud  .env.example  .gitignore  .lychee-results-verify.txt  .pre-commit-config.yaml  .releaserc.json  ADR-0032_AUDIT_REPORT.md  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CLICKHOUSE_SCHEMA_AUDIT_REPORT.md  CONFORMITY_AUDIT_REPORT.md  CONTRIBUTING.md  CROSS_REFERENCE_AUDIT_REPORT.md  CROSS_REFERENCE_AUDIT_SUMMARY.md  CROSS_REFERENCE_FIXES.md  CROSS_REFERENCE_REPORT.md  DOCUMENTATION.md  EXTRACTED_REFERENCES.txt  Earthfile  FINAL_CROSS_REFERENCE_REPORT.md  MANIFEST.in  PROBE_USAGE_EXAMPLE.md  README.md  REFERENCE_VALIDATION_REPORT.md  RELEASE_NOTES.md  RELEASE_NOTES_SHORT.md  UV_BUILD_SUCCESS.md  VALIDATION_REPORT.md  benchmark_arrow_scale_analysis.py  benchmark_arrow_validation.py  benchmark_gapless_clickhouse.py  comprehensive_cross_reference_audit.py  dead_code_audit_plan.md  docker-compose.yml  extract_references.py  (+9 more)
.github/workflows/: ci.yml  e2e-validation.yml  production-validation.yml  publish-testpypi.yml  publish.yml  release-validation.yml  release.yml
deployment/systemd/: gapless-crypto-collector.service
docs/: CLICKHOUSE_MIGRATION.md  CURRENT_ARCHITECTURE_STATUS.yaml  DOCUMENTATION_INVENTORY.yaml  MIGRATION_v3_to_v4.md  MILESTONE_v3.0.0.yaml  MILESTONE_v3.1.0.yaml  PYPI_PUBLISHING_CONFIGURATION.yaml  README.md  SSOT_DOCUMENTATION_ARCHITECTURE.yaml  SSOT_PLANNING_SUMMARY.md  release-notes.md  sdk-quality-standards.yaml
docs/api/: dual-parameter-enhancement.yaml  gapless-dataframe-enhancement.yaml  mempool-pressure-probe.yaml  pruning-parquet-implementation.yaml  quick-start.md  v3.0.0-stabilization-plan.yaml  v3.1.0-test-quality-plan.yaml
docs/architecture/: CORE_COMPONENTS.md  DATA_FORMAT.md  OVERVIEW.md  cross-package-feature-integration.yaml  network.md
docs/audit/: comprehensive-audit-findings.yaml  comprehensive-audit-plan.yaml  mempool-probe-adversarial-audit.yaml
docs/decisions/: 0001-questdb-single-source-truth.md  0002-e2e-validation-approach.md  0003-questdb-schema-robustness-validation.md  0004-futures-support-implementation.md  0005-clickhouse-migration.md  0006-v4-audit-remediation.md  0007-release-validation-remediation.md  0008-clickhouse-local-visualization-toolchain.md  0009-port-reconfiguration-ch-ui-enablement.md  0010-optional-development-tooling-chdig.md  0011-pypi-package-fork-clickhouse.md  0012-documentation-accuracy-remediation.md  0013-autonomous-validation-framework.md  0014-codebase-housekeeping.md
docs/deployment/: linux-docker-setup.md  linux-native-setup.md  macos-colima-setup.md  python-uv-setup.md
docs/development/: CHDIG_GUIDE.md  CLICKHOUSE_CLIENT_GUIDE.md  CLICKHOUSE_LOCAL_GUIDE.md  CLICKHOUSE_PLAY_GUIDE.md  CLI_MIGRATION_GUIDE.md  COMMANDS.md  PUBLISHING.md  SETUP.md
docs/diagrams/: 01-collection-pipeline.mmd  02-gap-filling.mmd  03-multi-symbol-collection.mmd  04-download-caching.mmd  05-validation-flow.mmd  README.md
docs/guides/: DATA_COLLECTION.md  GAP_FILLING.md  MIGRATION_v5_to_v6.md  pypi-documentation.md  python-api.md
docs/milestones/: MILESTONE_v2.0.0.yaml  MILESTONE_v2.0.1.yaml  MILESTONE_v2.0.2.yaml  MILESTONE_v2.0.3.yaml  MILESTONE_v2.0.4.yaml  MILESTONE_v2.0.5.yaml  MILESTONE_v2.1.0.yaml  MILESTONE_v2.1.1.yaml  MILESTONE_v2.10.0.yaml  MILESTONE_v2.11.0.yaml  MILESTONE_v2.12.0.yaml  MILESTONE_v2.14.0.yaml  MILESTONE_v2.15.0.yaml  MILESTONE_v2.15.1.yaml  MILESTONE_v2.2.0.yaml  MILESTONE_v2.3.0.yaml  MILESTONE_v2.4.0.yaml  MILESTONE_v2.5.0.yaml  MILESTONE_v2.6.0.yaml  MILESTONE_v2.6.1.yaml  MILESTONE_v2.7.0.yaml  MILESTONE_v2.8.0.yaml  MILESTONE_v2.9.0.yaml
docs/research/: questdb-docker-image-analysis.md
docs/validation/: ARCHITECTURE.md  E2E_TESTING_GUIDE.md  OVERVIEW.md  QUERY_PATTERNS.md  SCREENSHOT_BASELINE.md  STORAGE.md
examples/: README.md  advanced_api_examples.py  basic_data_collection.py  cli_usage_examples.sh  complete_workflow.py  gap_filling_example.py  safe_data_collection.py  simple_api_examples.py
scratch/vision-futures-explorer/: EXPLORATION_REPORT.md  README.md  discovered_futures_symbols.json  futures_discovery.py  historical_probe.py  vision_futures_collector.py
scripts/: deploy-clickhouse-schema.py  deploy-monitoring-schema.py  publish-to-pypi.sh  run_validation.py  send_pushover_notification.py  validate-clickhouse-tools.sh  validate_binance_cdn.py  validate_binance_real_data.py  validate_clickhouse_cloud.py  validate_e2e_simple.py  validate_gap_filling.py  validate_github_release.py  validate_production_health.py  validate_pypi_version.py  write_validation_results.py
skills/clickhouse-cloud-connection/: SKILL.md
skills/clickhouse-cloud-credentials/: SKILL.md
skills/clickhouse-cloud-service-setup/: SKILL.md
skills/gapless-crypto-clickhouse-onboarding/: SKILL.md
skills/local-clickhouse/: SKILL.md
tests/: __init__.py  conftest.py  test_1s_1d_gap_filling.py  test_api_edge_cases.py  test_arrow_equivalence.py  test_atomic_operations.py  test_binance_collector.py  test_binance_collector_advanced.py  test_clickhouse_query.py  test_concurrent_download.py  test_config.py  test_deduplication_final.py  test_error_handling.py  test_etag_cache.py  test_futures_um.py  test_gap_filler.py  test_gap_filling_integration.py  test_gap_filling_unit.py  test_gapless_validation_1d_2018_present.py  test_input_validation.py  test_integration.py  test_local_clickhouse_e2e.py  test_monthly_to_daily_fallback.py  test_multi_symbol_isolation.py  test_output_dir_dataframe_fix.py  test_package.py  test_parameter_aliases.py  test_probe_module.py  test_protocol_http.py  test_query_ohlcv_api.py  test_rest_client_unit.py  test_schema_validation.py  test_simple_api.py  test_timeframe_constants.py  test_timestamp_utils.py  test_validation_storage.py
tests/e2e/: conftest.py  (+2 more)
tmp/: adr-plan-code-sync-verification.md  clickhouse_futures_validation.py  clickhouse_futures_validation_results.txt  clickhouse_quick_validation.py  clickhouse_validation.py  clickhouse_validation_results.txt  comprehensive_validation.py  comprehensive_validation_report.txt
(+292 files in other folders)
