[project]
name = "gapless-crypto-clickhouse"
version = "1.0.0"
description = "ClickHouse-based cryptocurrency data collection with zero-gap guarantee. 22x faster via Binance public repository with persistent database storage, USDT-margined futures support, and production-ready ReplacingMergeTree schema."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Eon Labs", email = "terry@eonlabs.com" }
]
maintainers = [
    { name = "Terry Li", email = "terry@eonlabs.com" }
]
license = { text = "MIT" }
keywords = [
    "clickhouse", "cryptocurrency", "crypto", "binance", "database",
    "trading", "OHLCV", "gap-filling", "financial-data", "time-series",
    "microstructure", "order-flow", "liquidity", "persistent-storage",
    "futures", "perpetual", "USDT-margined", "data-warehouse",
    "replacing-mergetree", "deterministic-versioning", "sql-queries",
    "zero-gaps", "22x-faster", "production-ready", "gapless"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "clickhouse-driver>=0.2.9",  # ClickHouse native protocol client for bulk ingestion and queries
    "duckdb>=1.1.0",  # Single-file OLAP database for validation report persistence
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",  # Data validation and OpenAPI schema generation for validation reports
    "pyarrow>=16.0.0",  # Required by pandas for Parquet I/O (df.to_parquet/read_parquet engine)
    "python-dotenv>=1.0.0",  # Environment variable management
]

[project.urls]
Homepage = "https://github.com/terrylica/gapless-crypto-clickhouse"
Documentation = "https://github.com/terrylica/gapless-crypto-clickhouse#readme"
Repository = "https://github.com/terrylica/gapless-crypto-clickhouse.git"
Issues = "https://github.com/terrylica/gapless-crypto-clickhouse/issues"
Changelog = "https://github.com/terrylica/gapless-crypto-clickhouse/blob/main/CHANGELOG.md"

# [project.scripts] section removed in v4.0.0
# Machine interface only - use Python API for programmatic access

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gapless_crypto_clickhouse"]

[tool.hatch.build.targets.wheel.force-include]
"src/gapless_crypto_clickhouse/py.typed" = "gapless_crypto_clickhouse/py.typed"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # function too complex (legacy code)
    "F841",  # unused variables (test files)
    "W291",  # trailing whitespace
    "W293",  # blank line contains whitespace
    "B904",  # exception chaining warnings (non-critical for publishing)
    "B007",  # unused loop variables (non-critical for publishing)
]

[tool.ruff.lint.isort]
known-first-party = ["gapless_crypto_clickhouse"]

[tool.black]
target-version = ['py312']
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Gradually improve type checking
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true

# Ignore missing imports for now
ignore_missing_imports = false

# Per-module configuration for gradual adoption
[[tool.mypy.overrides]]
module = "gapless_crypto_data.__init__"
disallow_untyped_defs = true

# Enforce strict mode on SDK entry points (v3.2.0)
[[tool.mypy.overrides]]
module = "gapless_crypto_data.api"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "gapless_crypto_data.__probe__"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (may require network access)",
    "asyncio: marks tests as async tests using asyncio",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pandas-stubs>=2.2.2.240807",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.13.0",
    "types-requests>=2.32.4.20250913",
    "yamllint>=1.37.1",
    "commitizen>=4.9.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
major_version_zero = false
bump_message = "chore(release): bump version $current_version → $new_version [skip ci]"
